started results display (copied from other team) and changed min width to 350 in mobile mode to avoid problems on small screens

--- a/styles.css
+++ b/styles.css
@@ -140,7 +140,7 @@ h1 {
 
 @media screen and (max-width: 650px) {
     main {
-        min-width: 400px;
+        min-width: 350px;
         width: 100%;
     }
 }
